# tiny_results_v1.3

./: README.md  Tiny MLPerf v1.3 Submission Checklist.docx  directory_structure.adoc  ~$nyMLPerf v1.3 Submission Checklist.docx
.github/: CODEOWNERS
closed/Qualcomm/: README.md
closed/Qualcomm/code/: CMakeLists.txt
closed/Qualcomm/code/AIMET/IC/: config_for_eai.json  config_for_eai_test.json  evaluation_imgclass_benchmark.py  htp_quantsim_config.json  model_info.json  source_model.tflite
closed/Qualcomm/code/AIMET/KWS/: checkpoint  config_for_eai.json  encodings.json.yaml  evaluate.py  evaluation_kws.py  evaluation_kws_benchmark.py  freez_input_encodings.json  keras_model.py  kws_saved_model_variables.tflite  model_info.json  model_nodes  pb2tflite.py
closed/Qualcomm/code/AIMET/KWS/trained_models/: checkpoint  kws.ckpt.data-00000-of-00001  kws.ckpt.index  kws_model.h5  kws_model_source_h5_test.pb  kws_model_source_h5_test_save.tflite
closed/Qualcomm/code/AIMET/KWS/trained_models/kws_ref_model/vari_ckpt/: checkpoint
closed/Qualcomm/code/AIMET/VWW/: evaluation_vww.py  model_info.json
closed/Qualcomm/code/AIMET/VWW/bias_correction/: temp.data-00000-of-00001  temp.index
closed/Qualcomm/code/anomaly_detection/: CMakeLists.txt  submitter_implemented.cpp
closed/Qualcomm/code/image_classification/: CMakeLists.txt  ic_aimet_asymmetric.json  submitter_implemented.cpp
closed/Qualcomm/code/image_classification/api/: submitter_implemented.h
closed/Qualcomm/code/image_classification/eai/: eai_log.h
closed/Qualcomm/code/image_classification/ic/: ic_model_settings.h
closed/Qualcomm/code/keyword_spotting/: CMakeLists.txt  submitter_implemented.cpp
closed/Qualcomm/code/keyword_spotting/api/: submitter_implemented.h
closed/Qualcomm/code/keyword_spotting/eai/: eai_tiny_api.h  platform.c  platform.h
closed/Qualcomm/code/keyword_spotting/kws/: kws_model_settings.h
closed/Qualcomm/code/person_detection/: CMakeLists.txt  submitter_implemented.cpp
closed/Qualcomm/code/person_detection/api/: internally_implemented.cpp  internally_implemented.h  submitter_implemented.h
closed/Qualcomm/code/person_detection/eai/: eai_tiny_api.c
closed/Qualcomm/code/person_detection/vww/: vww_model_settings.h
closed/Qualcomm/models/: ad_model.eai  ad_model.eaix  devices_kws_ic_vww.yaml  ic_aimet_symmetric.json  ic_model.eai  ic_model.eaix  kws_aimet_symmetric.json  kws_model.eai  kws_model.eaix  vww_aimet_symmetric.json  vww_keras_model.tflite  vww_model.eai  vww_model.eaix
closed/Qualcomm/systems/: Next_Generation_Snapdragon_Mobile_Platform_MTP.json  TinyMLPerf_v1.3_Submission_Checklist.docx
closed/STMicroelectronics/systems/: NUCLEO_H7A3ZI_Q.json  NUCLEO_H7A3ZI_Q_40MHz.json  (+6 more)
closed/kai_jiang/: README.md
(+361 files in other folders)
